@@ -29,6 +29,7 @@ package $schema.getNamespace();
 @org.apache.avro.specific.AvroGenerated
 public class ${this.mangle($schema.getName())} extends org.apache.avro.specific.SpecificFixed {
   public static final org.apache.avro.Schema SCHEMA$ = new org.apache.avro.Schema.Parser().parse("${this.javaEscape($schema.toString())}");
+  public static org.apache.avro.Schema getClassSchema() { return SCHEMA$; }
   
   /** Creates a new ${this.mangle($schema.getName())} */
   public ${this.mangle($schema.getName())}() {
